--- a/Client/payrollPortal.html
+++ b/Client/payrollPortal.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manager break room</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-    <!-- navbar begins -->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -34,64 +33,73 @@
             </div>
           </nav>
     </header>
-    <!-- navbar ends -->
     <br>
     <br>
     </br>
     </br>
-    <!-- main with buttons to go into different portals -->
     <main>
-        <div class="container text-center">
-            <div class="row">
-              <div class="col-4 col-md-4 text-bg-success p-3">
-                <button type="submit" value="Employee Portal" id="employeePortal">Employee Portal</button>
-              </div>
-              <div class="col-4 col-md-4"></div>
-              <div class="col-4 col-md-4"></div>
-            </div>
-            <br>
-            <br>
-            </br>
-            </br>
-            <div class="row">
-              <div class="col-4 col-md-4"></div>
-              <div class="col-4 col-md-6 text-bg-success p-3">
-                <button type="submit" value="Payroll Portal" id="payrollPortal">Payroll Portal</button>
-              </div>
-              <div class="col-4 col-md-6"></div>
-            </div>
-            <br>
-            <br>
-            </br>
-            </br>
-            <div class="row">
-              <div class="col-4 col-md-4"></div>
-              <div class="col-4 col-md-4"></div>
-              <div class="col-4 col-md-4 text-bg-success p-3">.col-4 .col-md-4</div>
-            </div>
-        </div>
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+                <th scope="col">Handle</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td colspan="2">Larry the Bird</td>
+                <td>@twitter</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td colspan="2">Larry the Bird</td>
+                <td>@twitter</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td colspan="2">Larry the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
     </main>
     <br>
-            <br>
-            </br>
-            </br>
+    <br>
+    </br>
+    </br>
     <footer>
-      <div class="card text-center">
-        <div class="card-header">
-          Featured
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-        <div class="card-footer text-body-secondary">
-          2 days ago
-        </div>
-      </div>
+        <div class="card text-center">
+            <div class="card-header">
+              Featured
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            <div class="card-footer text-body-secondary">
+              2 days ago
+            </div>
+          </div>
     </footer>
 
-    <script src="./landingPage.js"></script>
+
+    <script src="./payroll.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
