--- a/Client/splash.html
+++ b/Client/splash.html
@@ -81,7 +81,7 @@
         <div class="col-sm-6 mb-3 mb-sm-0">
           <div class="card">
             <div class="card-body"> 
-              <form>
+              <form id="signUpForm">
                 <h1>Sign Up</h1>
               <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">@</span>
@@ -102,15 +102,15 @@
                 <label for="email" class="form-label">Your email:</label>
                 <div class="input-group">
                   <span class="input-group-text" id="basic-addon3">example@gmail.com</span>
-                  <input type="text" class="form-control" id="email" aria-describedby="basic-addon3 basic-addon4" placeholder="Enter Email">
+                  <input type="text" class="form-control" id="emailSignUp" aria-describedby="basic-addon3 basic-addon4" placeholder="Enter Email">
                 </div>
               </div>
               
               <div class="mb-3">
                 <label for="password" class="form-label">Password:</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter Password">
+                <input type="password" class="form-control" id="passwordSignUp" placeholder="Enter Password">
               </div>
-              <button type="submit" class="btn btn-primary" id="signUpBtn">Sign Up!</button>
+              <button type="submit" value="Sign Up" class="btn btn-primary" id="signUpBtn">Sign Up</button>
             </form>
             </div>
           </div>
