--- a/Client/payrollPortal.html
+++ b/Client/payrollPortal.html
@@ -39,7 +39,7 @@
     </br>
     </br>
     <main>
-        <table class="table">
+        <table class="table zima">
             <thead>
               <tr>
                 <th scope="col">Payroll Id</th>
@@ -61,6 +61,9 @@
           data-bs-whatever="@login">
           Add Employee to Payroll
         </button>
+
+        <!-- download to pdf file button -->
+        <button id="getPDF" onclick="getPDF()">Download PDF</button>
       
         <!-- Modal -->
         <div
@@ -142,7 +145,9 @@
           </div>
     </footer>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.4.1/jspdf.debug.js"></script>
+    <script src="jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./payroll.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
