working on styling for all my pages, portal pages are final

--- a/Client/landingPage.html
+++ b/Client/landingPage.html
@@ -4,30 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manager break room</title>
+    <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
-<body>
+<body class="homeBgColor">
     <!-- navbar begins -->
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <a class="navbar-brand" id="navTitle" href="#">Welcome to EZ Pay!</a>
+              <button class="navbar-toggler" type="button" id="hamburgerBtn" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" id="navTitle" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" id="navTitle" href="#">FAQ</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" id="navTitle" href="#">Blog</a>
                   </li>
                 </ul>
               </div>
@@ -43,8 +41,8 @@
     <main>
         <div class="container text-center">
             <div class="row">
-              <div class="col-4 col-md-4 text-bg-success p-3">
-                <button type="submit" value="Employee Portal" id="employeePortal">Employee Portal</button>
+              <div class="col-4 col-md-3  p-3 ">
+                <button class="btn btn-secondary" type="submit" value="Employee Portal" id="employeePortal">Employee Portal</button>
               </div>
               <div class="col-4 col-md-4"></div>
               <div class="col-4 col-md-4"></div>
@@ -55,8 +53,8 @@
             </br>
             <div class="row">
               <div class="col-4 col-md-4"></div>
-              <div class="col-4 col-md-6 text-bg-success p-3">
-                <button type="submit" value="Payroll Portal" id="payrollPortal">Payroll Portal</button>
+              <div class="col-4 col-md-3 p-3">
+                <button class="btn btn-secondary" type="submit" value="Payroll Portal" id="payrollPortal">Payroll Portal</button>
               </div>
               <div class="col-4 col-md-6"></div>
             </div>
@@ -67,7 +65,9 @@
             <div class="row">
               <div class="col-4 col-md-4"></div>
               <div class="col-4 col-md-4"></div>
-              <div class="col-4 col-md-4 text-bg-success p-3">.col-4 .col-md-4</div>
+              <div class="col-4 col-md-3 p-3">
+                <button class="btn btn-secondary" type="submit" value="Manager Portal" id="payrollPortal">Manager Portal</button>
+              </div>
             </div>
         </div>
     </main>
@@ -75,21 +75,41 @@
             <br>
             </br>
             </br>
-    <footer>
-      <div class="card text-center">
-        <div class="card-header">
-          Featured
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-        <div class="card-footer text-body-secondary">
-          2 days ago
-        </div>
-      </div>
-    </footer>
+            <div class="footerBg">
+              <footer class="py-5">
+                <div class="row d-flex justify-content-between">
+                  <div class="col-6 col-md-2 mb-3">
+                    <h2 class="text-dark">EZ Pay</h2>
+                    <ul class="nav flex-column">
+                      <li class="nav-item mb-2"><a href="./landingPage.html" class="nav-link p-0 text-dark">Home</a></li>
+                      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">FAQs</a></li>
+                      <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Blog</a></li>
+                    </ul>
+                  </div>
+                 
+                  <div class="col-md-5 offset-md-1 mb-3">
+                    <form>
+                      <h5>Subscribe to our newsletter</h5>
+                      <p>Monthly digest of what's new and exciting from us.</p>
+                      <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                        <label for="newsletter1" class="visually-hidden">Email address</label>
+                        <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                        <button class="btn btn-dark" id="subBtn" type="button">Subscribe</button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+            
+                <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+                  <p>© 2023 EZ Pay, Inc. All rights reserved.</p>
+                  <ul class="list-unstyled d-flex">
+                    <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+                    <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+                    <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+                  </ul>
+                </div>
+              </footer>
+            </div>
 
     <script src="./landingPage.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
