--- a/Client/landingPage.html
+++ b/Client/landingPage.html
@@ -40,11 +40,11 @@
         <div class="container text-center">
             <div class="row">
               <div class="col-4 col-md-4  p-3 ">
-                <button class="btn btn-outline-primary
+                <button class="btn btn-outline-primary btn-lg
                 " type="submit" value="Employee Portal" id="employeePortal">Employee Portal</button>
               </div>
               <div class="col-8 col-md-8">
-                <p>Keep Track of all your team members here. Typically general information of each member will be here.</p>
+                <p class="landingDes">Keep Track of all your team members here. Typically general information of each member will be here.</p>
               </div>
             </div>
             <br>
@@ -53,10 +53,10 @@
             </br>
             <div class="row">
               <div class="col-8 col-md-8">
-                <p>When it's payroll week, enter each member in the payroll portal along with there wage so that we may do all the math for you! Know exactly how much each members gross pay will be for the week or biweekly.</p>
+                <p class="landingDes">When it's payroll week, enter each member in the payroll portal along with there wage so that we may do all the math for you! Know exactly how much each members gross pay will be for the week or biweekly.</p>
               </div>
-              <div class="col-4 col-md-6">
-                <button class="btn btn-outline-primary
+              <div class="col-4 col-md-4">
+                <button class="btn btn-outline-primary btn-lg
                 " type="submit" value="Payroll Portal" id="payrollPortal">Payroll Portal</button>
               </div>
             </div>
@@ -66,11 +66,11 @@
             </br>
             <div class="row">
               <div class="col-4 col-md-4  p-3 ">
-                <button class="btn btn-outline-primary
+                <button class="btn btn-outline-primary btn-lg
                 " type="submit" value="Manager Portal" id="ManagerPortal">Manger Portal</button>
               </div>
               <div class="col-8 col-md-8">
-                <p>Have the ability to see all users/payroll manager that have access to your EZ Pay account and, make edits on each portal.</p>
+                <p class="landingDes">Have the ability to see all users/payroll manager that have access to your EZ Pay account and, make edits on each portal.</p>
               </div>
             </div>
             </div>
@@ -79,6 +79,14 @@
     </main>
     <br>
             <br>
+
+            
+        <section class="pricePage container">
+          <h1>Let’s find the right plan for your business.</h1>
+          <button class="btn btn-warning">See Pricing</button>
+        </section>
+
+        <br>
             <div class="container">
               <footer class="py-5">
                 <div class="row d-flex justify-content-between">
@@ -98,7 +106,7 @@
                   <div class="col-md-5 offset-md-1 mb-3">
                     <form>
                       <h5>Subscribe to our newsletter</h5>
-                      <p>Monthly digest of what's new and exciting from us.</p>
+                      <p class="landingDes">Monthly digest of what's new and exciting from us.</p>
                       <div class="d-flex flex-column flex-sm-row w-100 gap-2">
                         <label for="newsletter1" class="visually-hidden">Email address</label>
                         <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
@@ -109,7 +117,7 @@
                 </div>
             
                 <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-                  <p>© 2023 EZ Pay, Inc. All rights reserved.</p>
+                  <p class="landingDes">© 2023 EZ Pay, Inc. All rights reserved.</p>
                   <ul class="list-unstyled d-flex">
                     <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
                     <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
