--- a/Client/manager.html
+++ b/Client/manager.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Manager Portal</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" id="navTitle" href="#">EZ Pay</a>
+              <a class="navbar-brand" id="navTitle" href="#">Manager Portal</a>
               <button class="navbar-toggler"  id="hamburgerBtn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -22,10 +22,10 @@
                     <a class="nav-link active" id="navTitle" aria-current="page" href="./landingPage.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" id="navTitle" href="#">FAQ</a>
+                    <a class="nav-link" id="navTitle" href="./blog.html">FAQ</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" id="navTitle" href="#">Blog</a>
+                    <a class="nav-link" id="navTitle" href="./blog.html">Blog</a>
                   </li>
                 </ul>
               </div>
@@ -34,6 +34,7 @@
     </header>
 
     <main class="p-3 bg">
+      <p>This table is in ascending order by manager id</p>
         <table class="table table-striped-columns table-hover zima" id="employeeTable">
             <thead>
               <tr>
@@ -124,22 +125,22 @@
     </main>
 
 
- <div class="container">
+    <div class="container">
       <footer class="py-5">
         <div class="row d-flex justify-content-between">
           <div class="col-6 col-md-2 mb-3">
-            <h2 class="text-light">EZ Pay</h2>
+            <h2 class="text-light">EZ Bookkeeping</h2>
             <ul class="nav flex-column">
               <li class="nav-item mb-2"><a href="./landingPage.html" class="nav-link p-0 text-light">Home</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">FAQs</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Blog</a></li>
+              <li class="nav-item mb-2"><a href="./blog.html" class="nav-link p-0 text-light">FAQs</a></li>
+              <li class="nav-item mb-2"><a href="./blog.html" class="nav-link p-0 text-light">Blog</a></li>
             </ul>
           </div>
-
-          <div class="col-6 col-md-2 mb-3">
-            <img src="../Assets/My project-1.png" class="footerLogo" alt="EZPay Logo">
-           </div>
          
+          <div class="col-6 col-md-2 mb-3">
+           <img src="../Assets/ezlogo-1.png" class="footerLogo" alt="EZPay Logo">
+          </div>
+
           <div class="col-md-5 offset-md-1 mb-3">
             <form>
               <h5>Subscribe to our newsletter</h5>
@@ -154,7 +155,7 @@
         </div>
     
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-          <p>© 2023 EZ Pay, Inc. All rights reserved.</p>
+          <p>© 2023 EZ Bookkeeping, Inc. All rights reserved.</p>
           <ul class="list-unstyled d-flex">
             <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
             <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
