--- a/Client/landingPage.html
+++ b/Client/landingPage.html
@@ -67,7 +67,7 @@
             <div class="row">
               <div class="col-4 col-md-4  p-3 ">
                 <button class="btn btn-outline-primary btn-lg
-                " type="submit" value="Manager Portal" id="ManagerPortal">Manger Portal</button>
+                " type="submit" value="Manager Portal" id="ManagerPortal">Manager Portal</button>
               </div>
               <div class="col-8 col-md-8">
                 <p class="landingDes">Have the ability to see all users/payroll manager that have access to your EZ Bookkeeping account and, make edits on each portal.</p>
