--- a/Client/manager.html
+++ b/Client/manager.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" id="navTitle" href="#">Manager Portal</a>
+              <a class="navbar-brand" id="navTitle" href="./landingPage.html">Manager Portal</a>
               <button class="navbar-toggler"  id="hamburgerBtn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
