added img and style to landingpage, looks good now and edited employee portal to member portal

--- a/Client/blog.html
+++ b/Client/blog.html
@@ -170,7 +170,7 @@
         <a class="link-secondary" href="#"></a>
       </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-body-emphasis text-decoration-none" href="./">EZ Bookkeeping</a>
+        <a class="blog-header-logo text-body-emphasis text-decoration-none" href="#">EZ Bookkeeping</a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
         <a class="link-secondary" href="#" aria-label="Search">
