--- a/Client/employeePortal.html
+++ b/Client/employeePortal.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" id="navTitle" href="./landingPage.html">Employee Portal</a>
+              <a class="navbar-brand" id="navTitle" href="./landingPage.html">Member Portal</a>
               <button class="navbar-toggler" id="hamburgerBtn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -39,7 +39,7 @@
         <table class="table table-striped-columns table-hover zima" id="employeeTable">
             <thead>
               <tr>
-                <th scope="col" id="columnTable">Employee Id</th>
+                <th scope="col" id="columnTable">Member Id</th>
                 <th scope="col" id="columnTable">Managers Id</th>
                 <th scope="col" id="columnTable">First Name</th>
                 <th scope="col" id="columnTable">Last Name</th>
@@ -57,7 +57,7 @@
         data-bs-toggle="modal"
         data-bs-target="#signin"
         data-bs-whatever="@login">
-        Add A New Employee
+        Add A New Member
       </button>
 
        <!-- download to pdf file button -->
@@ -79,7 +79,7 @@
         <div class="modal-dialog">
           <div class="modal-content rounded-4 shadow">
             <div class="modal-header p-5 pb-4 border-bottom-0">
-              <h5 class="modal-title fw-bold mb-0" id="signinLabel">Fill Out All Fields To Add A New Employee</h5>
+              <h5 class="modal-title fw-bold mb-0" id="signinLabel">Fill Out All Fields To Add A New Member</h5>
               <button
                 type="button"
                 class="btn-close"
@@ -121,7 +121,7 @@
                   class="w-100 mb-2 btn btn-lg rounded-4 btn-primary"
                   type="submit"
                   id="empSubmit">
-                  Add Employee
+                  Add Member
                 </button>
             </div>
           </div>
