--- a/Client/landingPage.html
+++ b/Client/landingPage.html
@@ -39,12 +39,12 @@
     <br>
         <div class="container text-center">
             <div class="row">
-              <div class="col-4 col-md-4  p-3 ">
-                <button class="btn btn-outline-primary btn-lg
-                " type="submit" value="Employee Portal" id="employeePortal">Employee Portal</button>
+              <div class="col-6 col-md-6  p-3 ">
+                <img class="img-fluid" src="../Assets/human-resources-5033959_640.png" alt="">
               </div>
-              <div class="col-8 col-md-8">
-                <p class="landingDes">Keep Track of all your team members here. Typically general information of each member will be here.</p>
+              <div class="col-6 col-md-6 align-self-center">
+                <button class="btn btn-outline-primary" type="submit" value="Employee Portal" id="employeePortal">Member Portal</button>
+                <p class="landingDes">Keep Track of all your members on the team here. Typically general information of each member will be here.</p>
               </div>
             </div>
             <br>
@@ -52,12 +52,12 @@
             </br>
             </br>
             <div class="row">
-              <div class="col-8 col-md-8">
+              <div class="col-8 col-md-8 align-self-center">
+                <button class="btn btn-outline-primary btn-lg" type="submit" value="Payroll Portal" id="payrollPortal">Payroll Portal</button>
                 <p class="landingDes">When it's payroll week, enter each member in the payroll portal along with there wage so that we may do all the math for you! Know exactly how much each members gross pay will be for the week or biweekly.</p>
               </div>
               <div class="col-4 col-md-4">
-                <button class="btn btn-outline-primary btn-lg
-                " type="submit" value="Payroll Portal" id="payrollPortal">Payroll Portal</button>
+                <img class="img-fluid" src="../Assets/cloud.png" alt="">
               </div>
             </div>
             <br>
@@ -66,12 +66,11 @@
             </br>
             <div class="row">
               <div class="col-4 col-md-4  p-3 ">
-                <button class="btn btn-outline-primary btn-lg
-                " type="submit" value="Manager Portal" id="ManagerPortal">Manager Portal</button>
+                <img class="img-fluid" src="../Assets/foldertree.png" alt="">
               </div>
-              <div class="col-8 col-md-8">
-                <p class="landingDes">Have the ability to see all users/payroll manager that have access to your EZ Bookkeeping account and, make edits on each portal.</p>
-              </div>
+              <div class="col-8 col-md-8 align-self-center">
+                <button class="btn btn-outline-primary btn-lg" type="submit" value="Manager Portal" id="ManagerPortal">Manager Portal</button>
+                <p class="landingDes">Have the ability to see all users/payroll manager that have access to your EZ Bookkeeping account and, make edits on each portal.</p>              </div>
             </div>
             </div>
         </div>
