--- a/public/splash.html
+++ b/public/splash.html
@@ -6,7 +6,7 @@
     <title>Ez Bookkeeping Solutions</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="shortcut icon" href="ico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Assets/favicon-32x32.png">
   </head>
 
   <body class="splashBg">
