added favicon too all pages

--- a/public/blog.html
+++ b/public/blog.html
@@ -10,6 +10,7 @@
     <title>Blog Template · Bootstrap v5.3</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/blog/">
+    <link rel="icon" type="image/png" sizes="32x32" href="../Assets/favicon-32x32.png">
 
     
 
