added express.static and removed all front end files from pics

--- a/public/blog.html
+++ b/public/blog.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
-  <head><script src="../assetsexample/js/color-modes.js"></script>
+  <head><script src="/js/color-modes.js"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,13 +10,13 @@
     <title>Blog Template · Bootstrap v5.3</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/blog/">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 
     
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
-<link href="../assetsexample/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -177,7 +177,7 @@
         <a class="link-secondary" href="#" aria-label="Search">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
         </a>
-        <a class="btn btn-sm btn-outline-secondary" href="./splash.html">Sign up</a>
+        <a class="btn btn-sm btn-outline-secondary" href="/index.html">Sign up</a>
       </div>
     </div>
   </header>
@@ -309,7 +309,7 @@
     <a href="#">Back to top</a>
   </p>
 </footer>
-<script src="../assetsexample/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/dist/js/bootstrap.bundle.min.js"></script>
 
     </body>
 </html>
