--- a/public/landingPage.html
+++ b/public/landingPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manager break room</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body class="splashBg">
@@ -41,10 +41,10 @@
         <div class="container text-center">
             <div class="row">
               <div class="col-6 col-md-6  p-3 ">
-                <img class="img-fluid" src="../Assets/human-resources-5033959_640.png" alt="">
+                <img class="img-fluid" src="/human-resources-5033959_640.png" alt="">
               </div>
               <div class="col-6 col-md-6 align-self-center">
-                <button class="btn btn-outline-primary" type="submit" value="Employee Portal" id="employeePortal">Member Portal</button>
+                <button class="btn btn-outline-primary btn-lg" type="submit" value="Employee Portal" id="employeePortal">Member Portal</button>
                 <p class="landingDes">Keep Track of all your members on the team here. Typically general information of each member will be here.</p>
               </div>
             </div>
@@ -58,7 +58,7 @@
                 <p class="landingDes">When it's payroll week, enter each member in the payroll portal along with there wage so that we may do all the math for you! Know exactly how much each members gross pay will be for the week or biweekly.</p>
               </div>
               <div class="col-4 col-md-4">
-                <img class="img-fluid" src="../Assets/cloud.png" alt="">
+                <img class="img-fluid" src="/cloud.png" alt="">
               </div>
             </div>
             <br>
@@ -67,7 +67,7 @@
             </br>
             <div class="row">
               <div class="col-4 col-md-4  p-3 ">
-                <img class="img-fluid" src="../Assets/foldertree.png" alt="">
+                <img class="img-fluid" src="/foldertree.png" alt="">
               </div>
               <div class="col-8 col-md-8 align-self-center">
                 <button class="btn btn-outline-primary btn-lg" type="submit" value="Manager Portal" id="ManagerPortal">Manager Portal</button>
@@ -93,7 +93,7 @@
               </div>
              
               <div class="col-6 col-md-2 mb-3">
-               <img src="../Assets/ezlogo-1.png" class="footerLogo" alt="EZPay Logo">
+               <img src="/ezlogo-1.png" class="footerLogo" alt="EZPay Logo">
               </div>
     
               <div class="col-md-5 offset-md-1 mb-3">
