--- a/public/payrollPortal.html
+++ b/public/payrollPortal.html
@@ -6,7 +6,7 @@
     <title>Payroll Portal</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body class="bgColor">
@@ -148,7 +148,7 @@
           </div>
          
           <div class="col-6 col-md-2 mb-3">
-           <img src="../Assets/ezlogo-1.png" class="footerLogo" alt="EZPay Logo">
+           <img src="/ezlogo-1.png" class="footerLogo" alt="EZPay Logo">
           </div>
 
           <div class="col-md-5 offset-md-1 mb-3">
