delete folders in assetsexample and set the path in the html to just the file

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
-  <head><script src="/js/color-modes.js"></script><script src="/landingPage.js"></script>
+  <head><script src="/color-modes.js"></script><script src="/landingPage.js"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
-<link href="/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="/bootstrap.min.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -316,7 +316,7 @@
     </div>
   </footer>
 </div>
-<script src="/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/bootstrap.bundle.min.js"></script>
 
     </body>
 </html>
