added pricing to the nav bar

--- a/public/blog.html
+++ b/public/blog.html
@@ -188,6 +188,7 @@
       <a class="nav-item nav-link link-body-emphasis" href="#blog">Blog</a>
       <a class="nav-item nav-link link-body-emphasis" href="#ff">Future Features</a>
       <a class="nav-item nav-link link-body-emphasis" href="#aboutUs">About Us</a>
+      <a class="nav-item nav-link link-body-emphasis" href="/pricing.html">Pricing</a>
   </div>
 </div>
 
