--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/blog.html">Blog</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pricing.html">Pricing</a>
+              </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -185,6 +188,7 @@
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-light">Home</a></li>
               <li class="nav-item mb-2"><a href="/blog.html" class="nav-link p-0 text-light">FAQs</a></li>
               <li class="nav-item mb-2"><a href="/blog.html" class="nav-link p-0 text-light">Blog</a></li>
+              <li class="nav-item mb-2"><a href="/pricing.html" class="nav-link p-0 text-light">Pricing</a></li>
             </ul>
           </div>
          
